fix topic item overflow, refine top spacing as page switches, hide read progress bar as page switches, refine topic text display on header
- fix topic item overflow
- refine top spacing as page switches
- hide read progress bar as page switches
- refine topic text display on header

--- a/src/components/navigation/TopicPopup.scss
+++ b/src/components/navigation/TopicPopup.scss
@@ -133,7 +133,7 @@
   }
 
   @media (min-width: $screen-lg-min) {
-    height: 10rem;
+    height: 11.5rem;
   }
 
   .img-outer {
